save intermediate result - unfinished

--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -44,6 +44,11 @@ table {
 	vertical-align: top;
 }
 
+.userinfo {
+	display: inline-block;
+	vertical-align: top;
+}
+
 .centertop {
     text-align: center;
     vertical-align: top;
